--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=https://subscription-dashboard-task-86cp.onrender.com/api
+VITE_API_URL=http://localhost:5000/api
+# VITE_API_URL=https://subscription-dashboard-task-86cp.onrender.com/api
 VITE_RAZORPAY_KEY_ID=rzp_test_RirvD9gr2wVYKn
