--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-hook-form": "^7.66.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
   },
