--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "seed": "node src/scripts/seed.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
